--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-spinner/animations/line-spin-fade-rotating.css"
             ],
             "scripts": []
           },
